--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "autosize": "^4.0.2",
         "popper": "^1.0.1",
-        "popper.js": "^1.16.0"
+        "popper.js": "^1.16.0",
+        "vue-textarea-autosize": "^1.1.1"
     }
 }
