--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "autosize": "^4.0.2",
         "popper": "^1.0.1",
         "popper.js": "^1.16.0",
+        "tiptap": "^1.26.6",
+        "tiptap-extensions": "^1.28.6",
         "vue-textarea-autosize": "^1.1.1"
     }
 }
